--- a/formdata-handling/views/index.ejs
+++ b/formdata-handling/views/index.ejs
@@ -1,4 +1,3 @@
-<!-- views/index.ejs -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,7 +7,23 @@
     <h1><%= title %></h1>
     <ul>
       <% if (locals.users) {%> <% users.forEach(user => { %>
-      <li>ID: <%= user.id %>, Name: <%= user.firstName %> <%= user.lastName %></li>
+      <li>
+        ID: <%= user.id %>, Name: <%= user.firstName %> <%= user.lastName %>
+        <a href="/<%= user.id %>/update">Update</a>
+        <!-- This time we're sending a POST request to our route, so we need a form. -->
+        <form
+          action="/<%= user.id %>/delete"
+          method="POST"
+          style="display: inline"
+        >
+          <button
+            type="submit"
+            onclick="return confirm('Are you sure you want to delete this user?');"
+          >
+            Delete
+          </button>
+        </form>
+      </li>
       <% }); %> <% } %>
     </ul>
     <a href="/create">Create a user</a>
