--- a/formdata-handling/views/createUser.ejs
+++ b/formdata-handling/views/createUser.ejs
@@ -1,4 +1,3 @@
-<!-- views/createUser.ejs -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,6 +5,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
+    <%- include("partials/errors.ejs") %>
     <form
       action="/create"
       method="POST"
