Add a form to allow for the search of an existing user

--- a/formdata-handling/views/createUser.ejs
+++ b/formdata-handling/views/createUser.ejs
@@ -26,6 +26,20 @@
       />
       <button type="submit">Submit</button>
     </form>
+    <h1>Search for:</h1>
+    <form
+      action="/search"
+      method="GET"
+    >
+      <label for="fullName">Name: </label>
+      <input
+        type="text"
+        name="fullName"
+        id="fullName"
+        required
+      />
+      <button type="submit">Submit</button>
+    </form>
     <a href="/">Back to home</a>
   </body>
 </html>
