--- a/inventory-pro/views/properties.ejs
+++ b/inventory-pro/views/properties.ejs
@@ -6,7 +6,7 @@
   <body>
     <h1><%= title %></h1>
     <ul>
-      <% if (locals.users) {%> <% users.forEach(user => { %>
+      <% if (locals.properties) {%> <% properties.forEach(user => { %>
       <li>
         ID: <%= user.id %>, Name: <%= user.firstName %> <%= user.lastName %>
         <a href="/<%= user.id %>/update">Update</a>
