--- a/inventory-pro/views/index.ejs
+++ b/inventory-pro/views/index.ejs
@@ -6,23 +6,10 @@
   <body>
     <h1><%= title %></h1>
     <ul>
-      <% if (locals.properties) {%> <% properties.forEach(property => { %>
+      <% if (locals.propertyTypes) {%> <% propertyTypes.forEach(propertyType => { %>
       <li>
-        ID: <%= property.id %>, Name: <%= property.name%>
-        <a href="/<%= property.id %>/update">Update</a>
-        <!-- This time we're sending a POST request to our route, so we need a form. -->
-        <form
-          action="/<%= property.id %>/delete"
-          method="POST"
-          style="display: inline"
-        >
-          <button
-            type="submit"
-            onclick="return confirm('Are you sure you want to delete this property?');"
-          >
-            Delete
-          </button>
-        </form>
+        Name: <%= propertyType.type%>
+        <a href="/properties/<%= propertyType.type %>">View Properties</a>
       </li>
       <% }); %> <% } %>
     </ul>
