--- a/inventory-pro/views/properties.ejs
+++ b/inventory-pro/views/properties.ejs
@@ -6,26 +6,9 @@
   <body>
     <h1><%= title %></h1>
     <ul>
-      <% if (locals.properties) {%> <% properties.forEach(user => { %>
-      <li>
-        ID: <%= user.id %>, Name: <%= user.firstName %> <%= user.lastName %>
-        <a href="/<%= user.id %>/update">Update</a>
-        <!-- This time we're sending a POST request to our route, so we need a form. -->
-        <form
-          action="/<%= user.id %>/delete"
-          method="POST"
-          style="display: inline"
-        >
-          <button
-            type="submit"
-            onclick="return confirm('Are you sure you want to delete this user?');"
-          >
-            Delete
-          </button>
-        </form>
-      </li>
+      <% if (locals.categorizedProperties) {%> <% categorizedProperties.forEach(property => { %>
+      <li>ID: <%= property.id %>, Name: <%= property.city %> <%= property.zipcode %></li>
       <% }); %> <% } %>
     </ul>
-    <a href="/create">Create a user</a>
   </body>
 </html>
