--- a/inventory-pro/views/properties.ejs
+++ b/inventory-pro/views/properties.ejs
@@ -8,6 +8,7 @@
     <ul>
       <% if (locals.categorizedProperties) {%> <% categorizedProperties.forEach(property => { %>
       <li>ID: <%= property.id %>, Location: <%= property.city %> <%= property.zipcode %></li>
+      <a href="/property/<%= property.id %>">View Property</a>
       <% }); %> <% } %>
     </ul>
   </body>
