--- a/inventory-pro/views/property.ejs
+++ b/inventory-pro/views/property.ejs
@@ -8,6 +8,17 @@
     <ul>
       <% if (locals.property) {%> <% property.forEach(propertyObj => { %>
       <li>ID: <%= propertyObj.id %>, Name: <%= propertyObj.address %> <%= propertyObj.city %></li>
+      <form
+        action="/property/<%= propertyObj.home_type_id %>/delete/<%= propertyObj.id %>"
+        method="GET"
+      >
+        <button
+          type="submit"
+          onclick="return confirm('Are you sure you want to delete this property?');"
+        >
+          Delete
+        </button>
+      </form>
       <% }); %> <% } %>
     </ul>
   </body>
