--- a/members-only/views/login.ejs
+++ b/members-only/views/login.ejs
@@ -12,7 +12,7 @@
     <h1>Sign up</h1>
     <form
       method="POST"
-      action="/login"
+      action="/register"
     >
       <input
         type="text"
