--- a/members-only/views/register.ejs
+++ b/members-only/views/register.ejs
@@ -9,7 +9,7 @@
     <title><%= title || 'Document' %></title>
   </head>
   <body>
-    <h1>Sign up</h1>
+    <h1>Register</h1>
     <form
       method="POST"
       action="/register"
