--- a/members-only/views/register.ejs
+++ b/members-only/views/register.ejs
@@ -10,6 +10,15 @@
   </head>
   <body>
     <h1>Register</h1>
+
+    <% if (errors && errors.length > 0) { %>
+    <ul class="error-list">
+      <% for (let i = 0; i < errors.length; i++) { %>
+      <li><%= errors[i].msg %></li>
+      <% } %>
+    </ul>
+    <% } %>
+
     <form
       method="POST"
       action="/register"
