Add a form input for password confirmation

--- a/members-only/views/register.ejs
+++ b/members-only/views/register.ejs
@@ -45,6 +45,12 @@
         placeholder="Password"
         required
       />
+      <input
+        type="password"
+        name="passwordConfirmation"
+        placeholder="Confirm Password"
+        required
+      />
       <button type="submit">Sign up</button>
     </form>
   </body>
